# vn

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.cmd  clean.cmd
assets/: blur.hlsl  sdf.h  shader.frag  shader.hlsl  shader.vert  window_mask.hlsl  window_shadow.hlsl  window_thumbnail.hlsl
discard/: message_queue.cpp  message_queue.hpp  renderer.hpp  window_resource.cpp  window_resource.hpp  window_system.hpp
discard/window/: window_manager.cpp
include/vn/: error_handling.hpp  log.hpp  timer.hpp  ui.hpp
include/vn/ui/: lerp_animation.hpp  ui.hpp
src/: main.cpp
src/vn/: hash.hpp  object_pool.hpp  util.cpp  util.hpp  vn.cpp  vn.hpp
src/vn/renderer/: VmaUsage.cpp  buffer.cpp  buffer.hpp  compiler.cpp  compiler.hpp  config.hpp  core.cpp  core.hpp  descriptor_heap.cpp  descriptor_heap.hpp  descriptor_heap_manager.cpp  descriptor_heap_manager.hpp  desktop_duplication.cpp  desktop_duplication.hpp  image.cpp  image.hpp  image_manager.cpp  image_manager.hpp  memory_allocator.cpp  memory_allocator.hpp  memory_pool.hpp  message_queue.cpp  message_queue.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  renderer_message_queue.cpp  renderer_message_queue.hpp  shader_compiler.cpp  shader_compiler.hpp  shader_type.hpp  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp  window_resource.cpp  window_resource.hpp  window_system.cpp  window_system.hpp
src/vn/ui/: lerp_animation.hpp  ui.cpp  ui_context.cpp  ui_context.hpp
src/vn/window/: window.cpp  window.hpp  window_manager.cpp  window_manager.hpp
test/: main.cpp
